Fix svg icons on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -182,16 +182,21 @@ displays, though, the outline will appear */
   margin: 15px;
   flex-grow: 0;
   flex-shrink: 0;
+  position: relative;
 }
 
 .track__play-button__image {
   pointer-events: none;
-  transform: translateY(2px);
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 15px;
 }
 
 .track__play-button__image--spin {
   will-change: transform;
-  transform: translateY(2px) rotate(0deg);
+  transform: translate(-50%, -50%) rotate(0deg);
   animation-name: trackPlayButtonImageSpin;
   animation-duration: 1s;
   animation-fill-mode: forwards;
@@ -201,11 +206,11 @@ displays, though, the outline will appear */
 
 @keyframes trackPlayButtonImageSpin {
   from {
-    transform: translateY(2px) rotate(0deg);
+    transform: translate(-50%, -50%) rotate(0deg);
   }
 
   to {
-    transform: translateY(2px) rotate(359deg);
+    transform: translate(-50%, -50%) rotate(359deg);
   }
 }
 
